k8s/crashy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: crashy
  labels:
    app: crashy
spec:
  restartPolicy: Always
  containers:
  - name: crashy
    image: busybox
    command: ["/bin/sh", "-c", "exit 1"]
    resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
